# Jobs-for-AWS-IoT-embedded-sdk

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  MISRA.md  MigrationGuide.md  README.md  jobsFilePaths.cmake  lexicon.txt  manifest.yml  sbom.spdx
.github/: .cSpellWords.txt  CONTRIBUTING.md  linkAllowList.txt  memory_statistics_config.json
_data/: doc_config.json
main/: annotated.html  classes.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5f37482414c2187a6228ee619b82da7b.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_a9274b4a3cd5503f39a3de8923291b06.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__jobs__constants.html  group__jobs__constants.js  group__jobs__enum__types.html  group__jobs__structs.html  index.html  job__parser_8h_source.html  jobs_8c.html  jobs_8h.html  jobs_8h_source.html  jobs_config.html  jobs_describe_function.html  jobs_features.html  jobs_functions.html  jobs_getjobdocument_function.html  jobs_getjobid_function.html  jobs_getpending_function.html  jobs_gettopic_function.html  jobs_isjobupdatestatus_function.html  jobs_isstartnextaccepted_function.html  jobs_matchtopic_function.html  jobs_startnext_function.html  jobs_startnextmsg_function.html  jobs_update_function.html  jobs_updatemsg_function.html  (+9 more)
source/: jobs.c
test/: CMakeLists.txt
v1.0.0/: dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__jobs__constants.html  group__jobs__enum__types.html  index.html  jobs_8c.html  jobs_8h.html  jobs_8h_source.html  jobs_config.html  jobs_describe_function.html  jobs_features.html  jobs_functions.html  (+9 more)
(+245 files in other folders)
